Powdr release (public-facing pages done) (#4)
* added roster page back

* roster responsive design finished

* updated todo

* todo

* updated cryhard header/footer

* updated cryhard

* added class

* updated cryhard

* cryhard page

* cryhard player added

* rebased from main

* removed roster page

* started powdr epk

* refactor

* renamed dev-resources to assets

* videos folder

* powdr effect

* powdr product started

* public-facing pages done

--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 
-<!-- Under Construction Redirect -->
-<script>
-    window.location.href = "/assets/scripts/under-construction.html";
-</script>
-
 <html lang="en">
   <head>
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cryhard</title>
+    <title>powdr</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -21,7 +16,7 @@
     <link rel="stylesheet" href="../../assets/shared-styles/global.css">
     <link rel="stylesheet" href="../../assets/shared-styles/header.css">
     <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../assets/shared-styles/artist-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/epk.css">
   </head>
   
   <body>
@@ -52,7 +47,7 @@
     <!-- Main Content -->
     <main class="artist-section">
       <div class="artist-heading">
-        <h1 class="artist-name">CRYHARD</h1>
+        <h1 class="artist-name">powdr</h1>
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
       <div class="artist-image-container">
@@ -74,12 +69,11 @@
       </div>
       <div class="description-section">
         <p>
-          Cryhard is an indie/alternative band based out of Oklahoma City and consists of members 
-          Bailey Little, Patrick Hanscom, and Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. <br><br>
-          Cryhard is a project in which everyone fills different roles depending on the track.
-          This project has been in the works since 2018 and has had assistance from several good friends along the way. <br><br>
-          Of Course I Will is the band’s first full-length LP that reflects on themes of growing up, anxiety, and love. 
-          Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
+          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          <br><br>
+          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          <br><br>
+          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
         </p>
       </div>
     </main>
