--- a/roster/index.html
+++ b/roster/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Under Construction Redirect -->
 <script>
-    window.location.href = "/dev-resources/under-construction.html";
+    window.location.href = "/assets/scripts/under-construction.html";
 </script>
 
 <html lang="en">
@@ -12,14 +12,14 @@
     <title>Roster - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../dev-resources/shared-styles/global.css">
-    <link rel="stylesheet" href="../dev-resources/shared-styles/header.css">
-    <link rel="stylesheet" href="../dev-resources/shared-styles/footer.css">
+    <link rel="stylesheet" href="../assets/shared-styles/global.css">
+    <link rel="stylesheet" href="../assets/shared-styles/header.css">
+    <link rel="stylesheet" href="../assets/shared-styles/footer.css">
     <link rel="stylesheet" href="roster.css">
   </head>
 
@@ -28,12 +28,12 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../dev-resources/images/header/header-logo.svg" alt="Logo">
+          <img src="../assets/images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
         <a href="../store">STORE</a>
-        <a href="../roster">ROSTER</a>
+        <!-- <a href="../roster">ROSTER</a> -->
         <a href="../about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -41,7 +41,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
         </button>
       </div>
     </header>
@@ -57,7 +57,7 @@
           <a href="acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources\images\roster\acid-baptism\roster-pic.webp" alt="Acid Baptism Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\acid-baptism\roster-pic.webp" alt="Acid Baptism Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -70,7 +70,7 @@
           <a href="cryhard/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources\images\roster\cryhard\roster-pic.webp" alt="Cryhard Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\cryhard\roster-pic.webp" alt="Cryhard Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -83,7 +83,7 @@
           <a href="donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources\images\roster\donovan-funk\roster-pic.webp" alt="Donovan Funk Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\donovan-funk\roster-pic.webp" alt="Donovan Funk Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -96,7 +96,7 @@
           <a href="idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources\images\roster\idiot-mile\roster-pic.webp" alt="Idiot Mile Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\idiot-mile\roster-pic.webp" alt="Idiot Mile Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -109,7 +109,7 @@
           <a href="sweetest-pot/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources\images\roster\sweetest-pot\roster-pic.webp" alt="Sweetest Pot Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\sweetest-pot\roster-pic.webp" alt="Sweetest Pot Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -122,7 +122,7 @@
           <a href="toad-socks/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../dev-resources\images\roster\toad-socks\roster-pic.webp" alt="Toad Socks Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\toad-socks\roster-pic.webp" alt="Toad Socks Roster Image" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -142,14 +142,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../assets/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../store">STORE</a>
-          <a href="../roster">ROSTER</a>
+          <!-- <a href="../roster">ROSTER</a> -->
           <a href="../about">ABOUT</a>
         </nav>
       </div>
@@ -157,32 +157,32 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../assets/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
     </footer>
 
       <!-- Scripts -->
-      <script src="../dev-resources/scripts/CartToggleSticky.js" async></script>
-      <script src="../dev-resources/scripts/MobileHeaderExpand.js"></script>
-      <script src="../dev-resources/scripts/MerchBlockScrollSwap.js"></script>
+      <script src="../assets/scripts/CartToggleSticky.js" async></script>
+      <script src="../assets/scripts/MobileHeaderExpand.js"></script>
+      <script src="../assets/scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
