--- a/store/mcr-001/index.html
+++ b/store/mcr-001/index.html
@@ -7,23 +7,23 @@
     <title>Cassette - Side Quests Vol. 1 - MYSTERY CLASS RECORDS</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/global.css">
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/header.css">
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/global.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/header.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
   </head>
   
   <body>
-    <!-- Header Section -->
+  <!-- Header Section -->
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../dev-resources/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
       </a>
     </div>
     <nav class="nav">
@@ -36,7 +36,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </button>
     </div>
   </header>
@@ -47,7 +47,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../dev-resources/images/products/mcr-001/mcr-001-full.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette">
+          <img src="../../assets/images/products/mcr-001/mcr-001-full.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -425,10 +425,10 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The first-ever volume of Mystery Class’s very own series, Side Quests, is here.<br><br>This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won’t find them anywhere else!
+        The first-ever volume of Mystery Class’s very own series, Side Quests, is here.
         <br><br>
-      </p>
-      <p>
+        This album is composed of nine tracks from our favorite up-and-coming artists in Oklahoma City and Tulsa. Each original track was made exclusively for this compilation; you won’t find them anywhere else!
+        <br><br>
         With songs from Cryhard, Kitchen Slug, Idiot Mile, Always Last, Sweetest Pot, acid baptism, settling..., Toad Socks, and Hobbyist, there’s something for everyone to enjoy. Pick up your very own numbered and limited-edition copy of this first-ever MCR release. Limited to 25 copies.
       </p>
     </section>
@@ -438,7 +438,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../dev-resources/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
         <!-- Store Section -->
@@ -449,8 +449,8 @@
             <a href="../mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -467,8 +467,8 @@
             <a href="../mcr-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -485,8 +485,8 @@
             <a href="../mcr-004/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -503,8 +503,8 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -523,7 +523,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../dev-resources/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
         </div>
       </div>
     </section>
@@ -534,7 +534,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -549,33 +549,33 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="../../dev-resources/scripts/CartRefresh.js" async></script>
-    <script src="../../dev-resources/scripts/MobileHeaderExpand.js"></script>
-    <script src="../../dev-resources/scripts/ProductZoom.js"></script>
-    <script src="../../dev-resources/scripts/MerchBlockScrollSwap.js"></script>
+    <script src="../../assets/scripts/CartRefresh.js" async></script>
+    <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
+    <script src="../../assets/scripts/ProductZoom.js"></script>
+    <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
