--- a/store/mcr-007/index.html
+++ b/store/mcr-007/index.html
@@ -4,7 +4,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cassette - Pond - Toad Socks</title>
+    <title>Cassette - Settle Pain - powdr</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -47,21 +47,21 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../assets/images/products/mcr-004/mcr-004-full.webp" alt="Toad Socks - Pond">
+          <img src="../../assets/images/products/mcr-007/mcr-007-hover.webp" alt="Product Image">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
-          <h1 class="product-title">POND</h1>
+          <h1 class="product-title">Settle Pain (PRE-ORDER)</h1>
           <div class="whitespace"></div>
-          <h2 class="product-artist">Toad Socks</h2>
+          <h2 class="product-artist">powdr</h2>
           <div class="whitespace"></div>
-          <p class="release-date">Release Date: December 5, 2021</p>
+          <p class="release-date">Release Date: July 25, 2025</p>
           <hr class="separator">
           <div class="price-and-button">
             <span class="product-price">$10</span>
             <div class="product-buy-button">
 
-              <div id='product-component-1746666649543'></div>
+              <div id='product-component-1750364268851'></div>
               <script type="text/javascript">
               /*<![CDATA[*/
               (function () {
@@ -89,8 +89,8 @@
                   });
                   ShopifyBuy.UI.onReady(client).then(function (ui) {
                     ui.createComponent('product', {
-                      id: '7828776386614',
-                      node: document.getElementById('product-component-1746666649543'),
+                      id: '7849325887542',
+                      node: document.getElementById('product-component-1750364268851'),
                       moneyFormat: '%24%7B%7Bamount%7D%7D',
                       options: {
                 "product": {
@@ -397,28 +397,20 @@
             <h3>Track List</h3>
             <div class="whitespace"></div>
             <ol>
-              <li>Afro Boy</li>
-              <li>Space Jam</li>
-              <li>Blessed Sunday</li>
-              <li>Leak 1</li>
-              <li>Jergins</li>
-              <li>Sunset at the Trailer Park</li>
-              <li>Shit Creek</li>
-              <li>Darth Vader Playtime</li>
-              <li>Leak 2</li>
-              <li>Toad Crossing</li>
-              <h3>Bonus Track</h3>
-              <div class="whitespace"></div>
-              <li>Eastcreek Slowdance</li>
-            </ol>
+              <li>Marie's Cart</li>
+              <li>Apricot</li>
+              <li>The Line</li>
+              <li>Never Roam</li>
+              <li>Mutilation</li>
+              <li>Because</li>
           </div>
           <hr class="separator">
           <div class="pressing-info">
             <h3>Product Info:</h3>
             <div class="whitespace"></div>
             <p>First Edition Real-Time Dubbed</p>
-            <p>Solid Green Cassette x20</p>
-            <p>MCR-004</p>
+            <p>Silver Sonic Cassette x40</p>
+            <p>MCR-007</p>
           </div>
         </div>
       </div>
@@ -428,8 +420,11 @@
     <!-- Description Section -->
     <section class="description-section">
       <p>
-        The underground musical project of Toad Socks gets its first physical media release with the cassette of Pond.
-        <br><br>Comes with a beautiful solid green tape, reimagined cover art J-slip, clear case, and numbered card.
+        The highly anticipated debut release from powdr is here and we couldn’t be more excited.
+        <br><br>
+        Settle Pain provides an insane experience of indie, psych, kroutrock, and synth rock.
+        <br><br>
+        Limited to just 40, get one while you can!
       </p>
     </section>
 
@@ -465,16 +460,34 @@
               </div>
             </a>
 
-            <a href="../mcr-005/" class="merch-link">
+            <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Sweetest Pot</p>
-                    <p class="merch-block-product-name">Burner Tape, Vol. 2 - Cassette</p>
+                    <p class="merch-block-artist-name">Hat</p>
+                    <p class="merch-block-product-name">Black Corduroy</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$30</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="../mcr-002/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Cryhard</p>
+                    <p class="merch-block-product-name">Of Course I Will - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -501,23 +514,7 @@
               </div>
             </a>
 
-            <a href="../new-005/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">Hat</p>
-                    <p class="merch-block-product-name">Black Corduroy</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$30</div>
-                  </div>
-                </div>
-              </div>
-            </a>
+            
 
           </div>
         </div>
