--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -5,7 +5,7 @@
     <!-- Metadata and Page Settings -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>powdr</title>
+    <title>powdr - EPK</title>
 
     <!-- Favicon -->
     <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
@@ -50,32 +50,51 @@
         <h1 class="artist-name">powdr</h1>
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
-      <div class="artist-image-container">
-        <img src="../../assets/images/roster/cryhard/roster-pic.webp" alt="Band Photo" class="artist-image">
-      </div>
-      <div class="artist-interactables">
-        <div class="player-container">
+
+      <div class="artist-content">
+        <div class="artist-image-carousal">
+          <img src="../../assets/images/roster/powdr/band-pic1.webp" alt="Band Photo" class="artist-image">
+        </div>
+
+        <div class="artist-interactables">
           <div class="bandcamp-player">
-            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+            <iframe style="border: 0; width: 400px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=1161596957/size=large/bgcol=ffffff/linkcol=333333/artwork=small/transparent=true/" seamless><a href="https://powdr.bandcamp.com/album/a-pair-of-lovelies">A Pair of Lovelies by powdr</a></iframe>
           </div>
-          <div class="player-spacer"></div>
-        </div>
-        <div class="artist-social-icons">
-          <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a>
-          <a href=""><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
-          <a href=""><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
-          <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
+          <div class="artist-contact">
+            <p>Email: powdr.okc@gmail.com</p>
+            <p>Phone: 405-473-3295</p>
+          </div>
+          <div class="artist-socials">
+            <!-- <a href=""><img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook"></a> -->
+            <a href="https://www.instagram.com/powdr.band/"><img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
+            <a href="https://www.youtube.com/channel/UCpk0vs8ECEMZzpmkhWxAqig"><img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
+            <!-- <a href=""><img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok"></a> -->
+          </div>
         </div>
       </div>
+
       <div class="description-section">
         <p>
-          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          Introducing Powdr (officially spelled “powdr”) — a unique and refreshing addition to the Oklahoma rock scene. Their music offers a handful of sounds such as indie-rock, krautrock, alternative, and a pinch of psych—all rolled up into one big beautiful experience. While Powdr are seemingly the “new kids on the block,” individually they are no strangers to the music scene of Oklahoma and beyond. 
           <br><br>
-          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          The members of Powdr have maintained a musical relationship with one another for over 15 years—something that, for them, has always come naturally. Their chemistry and longtime friendship has served as a solid basis for the music they create together. Consisting of members Kilyn Massey (bass, vocals), Joshua Peck (guitar, vocals), Peyton Wilson (guitar, keyboard, vocals), and Brent Hodge (drums, vocals), Powdr showcases what a four-piece band can really do. From small house shows, to festival lineups supporting big indie heroes, Powdr’s individual members have so much experience under their belt. Despite what might seem like just the beginning, Powdr has been simmering for some time, foreshadowing their imminent success. 
           <br><br>
-          powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr powdr
+          In the summer of 2025 Powdr looks forward to their debut EP “Settle Pain”, which releases everywhere July 25th. This wonderfully cohesive release opens strongly with two singles “Marie’s Cart” and “The Line” as well as corresponding videos for each. 
+          <br><br>
+          Prior to the release of their first EP, Powdr has already proven themselves to be a live performance heavy hitter—playing with hometown heroes like Mad Honey, Lust Online, Photocopy, and many more. Their stage presence keeps the audience completely engaged with full band vocal layers, members switching instruments mid-song, and the incredibly tight unity in their playing.
+          <br><br>
+          Powdr has demonstrated lasting power, ambition, and a strong sense of community in their pursuit to take their music as far as it can go.
         </p>
       </div>
+
+      <div class="video-section">
+        <h1 class="video-heading">VIDEO</h1>
+      </div>
+
+      <div class="press-section">
+        <h1 class="press-heading">PRESS</h1>
+      </div>
+
     </main>
 
     <!-- Related Merch Section -->
